@@ -24,13 +24,13 @@ import com.romraider.logger.external.core.ExternalSensorConversions;
 
 public enum SensorConversionsAFR implements ExternalSensorConversions {
 	// AFR conversion assumes reported DATA value is Gas AFR
-	LAMBDA	("Lambda", "x*0.0680272108843537", "0.00", new GaugeMinMax(0.6,1.4,0.08)),
-	AFR_147	("AFR Gasoline", "x", "0.00", new GaugeMinMax(9,20,1)),        // gasoline
+	LAMBDA	("Lambda", "x*0.0680272108843537", "0.00", new GaugeMinMax(0.6,1.4,0.1)),
+	AFR_147	("AFR Gasoline", "x", "0.00", new GaugeMinMax(9,20,1)),        			  // gasoline
 	AFR_90	("AFR Ethonal", "x*0.6122448979591837", "0.00", new GaugeMinMax(5,12,1)), // ethanol
 	AFR_146	("AFR Diesel", "x*0.9931972789115646", "0.00", new GaugeMinMax(9,20,1)),  // diesel
-	AFR_64	("AFR Methonal", "x*0.4353741496598639", "0.00", new GaugeMinMax(4,9,1)),// methanol
-	AFR_155	("AFR LPG", "x*1.054421768707483", "0.00", new GaugeMinMax(9,20,1)), 	 // LPG
-	AFR_172	("AFR CNG", "x*1.170068027210884", "0.00", new GaugeMinMax(9,20,1)), 	 // CNG
+	AFR_64	("AFR Methonal", "x*0.4353741496598639", "0.00", new GaugeMinMax(4,9,1)), // methanol
+	AFR_155	("AFR LPG", "x*1.054421768707483", "0.00", new GaugeMinMax(9,20,1)), 	  // LPG
+	AFR_172	("AFR CNG", "x*1.170068027210884", "0.00", new GaugeMinMax(9,20,1)), 	  // CNG
 	AFR_34	("AFR Hydrogen", "x*2.312925170068027", "0.00", new GaugeMinMax(20,46,2.5)); // Hydrogen
 
 	private final String units;
